--- a/Changes
+++ b/Changes
@@ -5,3 +5,11 @@
 #   https://github.com/trizen/straw-viewer/releases
 
 [CHANGELOG]
+
+Version 0.0.2
+
+- Several bug fixes.
+
+Version 0.0.1
+
+- First release.
