--- a/Changes
+++ b/Changes
@@ -5,6 +5,10 @@
 
 [CHANGELOG]
 
+Version 0.0.8
+
+- Fixed the support for closed-captions for some videos.
+
 Version 0.0.7
 
 - Changed the default invidious instance to invidious.snopyta.org.
