--- a/Changes
+++ b/Changes
@@ -5,6 +5,10 @@
 
 [CHANGELOG]
 
+Version 0.1.3
+
+- Deprecated in favor of `pipe-viewer`.
+
 Version 0.1.2
 
 - Ensure that a randomly selected invidious instance actually works.
